--- a/sass/style.scss
+++ b/sass/style.scss
@@ -12,7 +12,7 @@
 @import "./cart";
 @import "./checkout";
 @import "./blog";
-
+@import "./single-product";
 
 // =============sale tag==========
 
