--- a/sass/_blog.scss
+++ b/sass/_blog.scss
@@ -8,7 +8,7 @@ $navtext: #5D5D5D;
 $black: #3D3D3D;
 $textblue: #0E53A5;
 $bordergray: #e0e0e0;
-$gray: #F9F9F9;
+$gray: #F8F8F8;
 $white : #fff;
 $darkgray: #dddada;
 $perablack: #777 ;
@@ -136,6 +136,88 @@ $bluegray: #4F6276;
                             font-size: 17px;
                             text-transform: capitalize;
                         }
+                    }
+                }
+                .blog__id{
+                    margin-top: 20px;
+                    margin-bottom: 60px;
+                    padding: 16px;
+                    display: flex;
+                    align-items: center;
+                    background: $gray;
+                    .blog__id_img{
+                        width: 20%;
+                        height: 100%;
+                    }
+                    .blog__id_detail{
+                        width: 80%;
+                        h6{
+                            font-size: 20px;
+                            font-weight: 600;
+                            margin: 15px 0px;
+                            color: $black;
+                            text-transform: capitalize;
+
+                        }
+                        p{
+                            color: $perablack;
+                            font-size: 18px;
+                            line-height: 25px;
+                            margin: 0;
+                        }
+                    }
+                }
+                .blog__comment{
+                    h4{
+                        font-size: 24px;
+                        font-weight: 400 !important;
+                        border-bottom: 1px solid $bordergray;
+                        margin-bottom: 35px;
+                        line-height: 40px;
+                        color: $black;
+                    }
+                    .row{
+                       .post_post{
+                            .row{
+                                .blog__post_main{
+                                    .post__main{
+                                        position: relative;
+                                        padding: 21px;
+                                        border: 1px solid $bordergray;
+                                        .post__heading{
+                                            display: flex;
+                                            justify-content: space-between;
+                                            .post__heading_main{
+                                                span{
+                                                    color:$perablack ; margin-right: 15px;
+                                                    font-size: 15px;
+                                                    a{
+                                                        font-size: 15px;
+                                                        color: $green;
+                                                        font-weight: 600;
+                                                    }
+                                                }
+                                            }
+                                            .post__heading_reply{
+                                                span{
+                                                a{
+                                                        font-size: 16;
+                                                        color: $perablack;
+                                                    text-transform: capitalize;
+                                                    }
+                                                }
+                                            }
+                                        }
+                                        p{
+                                            font-size: 16px;
+                                            padding-top: 20px;
+                                            color: $perablack;
+                                            margin-bottom: 0px;
+                                        }
+                                    }
+                                }
+                            }
+                       } 
                     }
                 }
             }
