--- a/sass/_common.scss
+++ b/sass/_common.scss
@@ -304,16 +304,127 @@ a{
     }
 }
 
-
-
-
-
-
-
 // ---------slick slider------------
 
+// ----------seller big content-----
+
+.seller__big_content{
+    width: 40%;
+    background-color: $white;
+    padding: 20px;
+    border-top: 1px solid $darkgray;
+    border-right: 1px solid $darkgray;
+    border-bottom: 1px solid $darkgray;
+
+    .big__content_img_main{
+        .big__slider{
+            .big__content_img{
+                img{
+                    width: 100%;
+                    margin-bottom: 35px;
+                }
+            }
+            ul{
+                display: flex;
+                margin-left: 30px;
+                li{
+                    content: url(../images/big_product-thumb.jpg);
+                    border: 1px solid $darkgray;
+                    &:hover{
+                        cursor: pointer;
+                    }
+                }
+                .slick-active{
+                    border: 1px solid $black;
+                }
+            }
+        }
+        .big__img_detail{
+            margin-top: 20px;
+            margin-left: 10px;
+            border-bottom: 1px solid $darkgray;
+            h2{
+                font-size: 20px;
+                line-height: 26px;
+                color: $textblue;
+                transition: all linear 0.3s;
+                font-weight: 700;
+                &:hover{
+                    color: $green;
+                }
+            }
+            p{
+                text-transform: uppercase;
+                font-size: 12px;
+                margin-bottom: 40px;
+            }
+        }
+        .big__img_price{
+            display: flex;
+            column-gap: 30px;
+            justify-content: end;
+            align-items: center;
+            margin-top: 20px;
+            p{
+                font-size: 25px;
+                font-weight: 700;
+                color: $navtext;
+                line-height: 55px;
+                margin: 0;
+            }
+        }
+    }
+}
 
 
 
+// ----------seller big content-----
+
+// ----------handle--------
+
+.handle-counter{
+    display: flex;
+    align-items: center;
+    p{
+        width: 30px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        height: 60px;
+        font-size: 16px;
+        border: 1px solid $bordergray;
+        background-color: $gray;
+        margin: 0;
+        border-radius: 0;
+        color: $black;
+        transition: all linear 0.2s;
+        &:hover{
+            opacity: 0.8;
+            color: $green;
+            background-color: $gray;
+            border:1px solid $bordergray ;
+        }
+    }
+    input{
+        height: 60px;
+        width: 60px;
+        padding: 0 0 0 0;
+        padding-left: 22px;
+        border: 0;
+        border-top: 1px solid $bordergray;
+        border-bottom: 1px solid $bordergray;
+        font-size: 20px;
+        outline: none;
+    }
+}
+
+
+
+
+
+
+
+// ----------handle--------
 
 
