--- a/sass/_blog.scss
+++ b/sass/_blog.scss
@@ -270,6 +270,54 @@ $bluegray: #4F6276;
                         }
                     }
                 }
+                .blog__side_add{
+                    padding-right: 20px;
+                    padding-left: 20px;
+                    margin-bottom: 45px;
+                }
+                .blog__side_post{
+                    margin-bottom: 50px;
+                    ul{
+                        li{
+                            margin-bottom: 20px;
+                            img{
+                                border: 1px solid $bordergray;
+                            }
+                            .post__detail{
+                                padding: 0;
+                                a{
+                                    font-size: 15px;
+                                    line-height: 16px;
+                                    color: $black;
+                                    text-transform: capitalize;
+                                    margin-bottom: 22px;
+                                    display: block;
+                                    margin-top: 10px;
+                                }
+                                p{
+                                    font-size: 13px;
+                                    line-height: 24px;
+                                    color: $perablack;
+                                    font-weight: 600;
+                                }
+                            }
+                        }
+                    }
+                }
+                .blog__side_tag{
+                    .tagcloud{
+                        a{
+                            color: $navtext;
+                            line-height: 38px;
+                            text-transform: capitalize;
+                            transition: all linear 0.2s
+                            ;
+                            &:hover{
+                                color: $green;
+                            }
+                        }
+                    }
+                }
             }
         }
     }
