--- a/sass/style.scss
+++ b/sass/style.scss
@@ -13,6 +13,12 @@
 @import "./checkout";
 @import "./blog";
 @import "./single-product";
+@import "./section/color-switcher";
+
+
+
+
+
 
 // =============sale tag==========
 
