--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,9 @@ a {
   text-align: left;
   width: 200px !important;
 }
+.dropdown li:hover {
+  cursor: pointer;
+}
 .dropdown li::after {
   content: "";
   width: 0 !important;
